@@ -1,3 +1,5 @@
+2008-08-25 Fix locale issues in SVG backend - MGD
+
 2008-08-01 Backported memory leak fixes in _ttconv.cpp - MGD
 
 2008-07-24 Deprecated (raise NotImplementedError) all the mlab2
